...
            Align(
              alignment: const AlignmentDirectional(0.0, 1.0),
              child: wrapWithModel(
                model: _model.studentnavigatebarModel,
                updateCallback: () => safeSetState(() {}),
                child: const StudentnavigatebarWidget(
                  key: ValueKey('Studentnavigatebar_7bwn'),
                  selectedPageIndex: 1,
                  hidden: false,
                ),
              ),
            ),
          ],
...
